add initial version of CentOS' HermitCore support

--- a/arch/x86/Kbuild
+++ b/arch/x86/Kbuild
@@ -6,6 +6,9 @@ obj-$(CONFIG_XEN) += xen/
 # lguest paravirtualization support
 obj-$(CONFIG_LGUEST_GUEST) += lguest/
 
+# HermitCore support
+obj-$(CONFIG_HERMIT_CORE) += hermit/
+
 obj-y += realmode/
 obj-y += kernel/
 obj-y += mm/
