--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -1797,6 +1797,8 @@ config HOTPLUG_CPU
 	    automatically on SMP systems. )
 	  Say N if you want to disable CPU hotplug.
 
+source "arch/x86/hermit/Kconfig"
+
 config BOOTPARAM_HOTPLUG_CPU0
 	bool "Set default setting of cpu0_hotpluggable"
 	default n
